# advanced-cv

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
01.image_classification_cnn/: image_classification_cnn_GTSRB.ipynb
02.transfer_learning/: common.py  dev_config.py  local_config.py  transfer_learning_COVID19.ipynb  transfer_learning_COVID19.py
03.object_detection/: model.py
04 .ocr/: Project2-Starter-Fine_Tuning_TrOCR.ipynb  ocr_curved_text.ipynb
05.segmentation/: segmentation_blood_vessels.ipynb
image_classification_cnn/: image_classification_cnn_GTSRB.ipynb
