[project]
name = "advanced-cv"
version = "0.1.0"
description = "Advanced computer vision topics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "kagglehub>=0.3.13",
    "kernels>=0.11.5",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "opencv-python>=4.12.0.88",
    "optuna>=4.6.0",
    "rfdetr>=1.3.0",
    "safetensors>=0.7.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "supervision>=0.27.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.240",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "marimo[recommended]>=0.18.4",
    "nbformat>=5.10.4",
    "pytest>=9.0.2",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
